[package]
name = "motsu-proc"
description = "Unit Testing Procedural Macros"
edition.workspace = true
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
keywords = ["arbitrum", "ethereum", "stylus", "unit-tests", "tests"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
motsu.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true
