[package]
name = "motsu"
description = "Unit Testing for Stylus"
edition.workspace = true
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
keywords = ["arbitrum", "ethereum", "stylus", "unit-tests", "tests"]
license.workspace = true
repository.workspace = true
version = "0.7.0"

[dependencies]
const-hex.workspace = true
once_cell.workspace = true
tiny-keccak.workspace = true
stylus-sdk.workspace = true
motsu-proc.workspace = true
dashmap.workspace = true
alloy-primitives = { workspace = true, features = ["arbitrary", "rand"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-macro-expander.workspace = true
alloy-sol-macro-input.workspace = true
alloy-signer-local.workspace = true
k256.workspace = true

[lints]
workspace = true
