[package]
name = "motsu"
description = "Unit Testing for Stylus"
edition.workspace = true
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
keywords = ["arbitrum", "ethereum", "stylus", "unit-tests", "tests"]
license.workspace = true
repository.workspace = true
version = "0.10.0"

[dependencies]
const-hex.workspace = true
once_cell.workspace = true
tiny-keccak.workspace = true
stylus-sdk.workspace = true
motsu-proc.workspace = true
dashmap.workspace = true
alloy-primitives = { workspace = true, features = ["arbitrary", "rand"] }
alloy-sol-types.workspace = true
alloy-signer-local.workspace = true
k256.workspace = true
revm-precompile.workspace = true

[dev-dependencies]
alloy-signer.workspace = true

[lints]
workspace = true
